feat: Added Ingredients layout and RecyclerView adapter
- Improved code structure and modularity
- Added methods documentation
- Removed ActionBar elevation and shadow
- Changed tabs background color

--- a/app/src/main/res/layout/ingredients_fragment.xml
+++ b/app/src/main/res/layout/ingredients_fragment.xml
@@ -1,8 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ingredients_main_layout"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:orientation="vertical">
 
-</TextView>
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/ingredients_main_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/ingredients_recipe_image"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/ingredients_recipe_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ingredients_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+</ScrollView>
