--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -11,12 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="scrollable"
-        app:tabIndicatorColor="@android:color/black"/>
+        app:tabIndicatorColor="@android:color/black"
+        android:background="@color/colorPrimary"
+        app:tabMaxWidth="130dp"
+        app:tabTextColor="@android:color/white"
+        app:tabSelectedTextColor="@color/colorAccent"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="1" />
+        android:layout_weight="1"/>
 
 </LinearLayout>
