--- a/app/src/main/res/layout/recipes_list_fragment.xml
+++ b/app/src/main/res/layout/recipes_list_fragment.xml
@@ -11,7 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabIndicatorColor="@android:color/black"
-        app:tabMode="fixed" />
+        app:tabMode="fixed"
+        android:background="@color/colorPrimary"
+        app:tabTextColor="@android:color/white"
+        app:tabSelectedTextColor="@color/colorAccent"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
