--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -3,22 +3,17 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <fragment
         android:id="@+id/master_recipes_list_fragment"
+        android:name="com.example.android.bakingapp.Fragments.RecipesListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"/>
 
     <View
         android:id="@+id/divider"
-        android:layout_width="1dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@android:color/darker_gray"/>
-
-    <FrameLayout
-        android:id="@+id/recipe_details_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"/>
 
 </LinearLayout>
