--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -3,21 +3,39 @@
     android:id="@+id/ingredient_item_layout"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:layout_marginBottom="1dp">
 
     <TextView
         android:id="@+id/ingredient_item_number"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_weight="0.5"
+        android:background="@color/colorPrimary"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/ingredient_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@id/ingredient_item_number"
+        android:paddingLeft="15dp"
+        android:textSize="16sp"
+        android:layout_weight="6"
+        android:background="#ffffff"/>
 
     <TextView
         android:id="@+id/ingredient_item_quantity_unit"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_toRightOf="@id/ingredient_item_name"
+        android:layout_alignParentRight="true"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_weight="2"
+        android:background="@color/colorAccent"/>
 
 </LinearLayout>
