--- a/app/src/main/res/layout/ingredients_fragment.xml
+++ b/app/src/main/res/layout/ingredients_fragment.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ingredients_main_layout"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/ingredients_main_layout"
+    <ImageView
+        android:id="@+id/ingredients_recipe_image"
+        android:layout_height="250dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:scaleType="fitXY"/>
 
-        <ImageView
-            android:id="@+id/ingredients_recipe_image"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:scaleType="fitXY" />
+    <TextView
+        android:background="@android:color/white"
+        android:id="@+id/ingredients_recipe_name"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:elevation="3dp"/>
 
-        <TextView
-            android:id="@+id/ingredients_recipe_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/ingredients_recycler_view"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ingredients_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
