--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -8,6 +8,7 @@
     android:gravity="center"
     android:padding="10dp"
     android:layout_marginBottom="15dp"
+    android:layout_marginRight="10dp"
     android:background="@android:color/white">
 
     <ImageView
