fix: Tab selection is restored on DetailsFragment rotation
- Changed step layout to a ScrollView

--- a/app/src/main/res/layout/step_fragment.xml
+++ b/app/src/main/res/layout/step_fragment.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/step_main_layout"
-    android:orientation="vertical"
+    android:id="@+id/step_main_scroll_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/colorPrimary">
 
-    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-        android:id="@+id/step_exoplayer_view"
+    <LinearLayout
+        android:id="@+id/step_main_layout"
         android:layout_width="match_parent"
-        android:layout_height="250dp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/step_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+            android:id="@+id/step_exoplayer_view"
+            android:layout_width="match_parent"
+            android:layout_height="250dp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/step_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+</ScrollView>
