feat: Polished Recipes list items UI
- Changed recipes items layout and added rounded corners
- Added dividers for StepsListRecyclerView
- Added custom activity title for recipe details activity
that displays the app's name followed by a dash and the recipe's name

--- a/app/src/main/res/layout/step_item.xml
+++ b/app/src/main/res/layout/step_item.xml
@@ -3,10 +3,7 @@
     android:id="@+id/step_card_title"
     android:layout_width="match_parent"
     android:layout_height="70dp"
-    android:background="@color/colorAccent"
     android:gravity="center"
-    android:layout_marginBottom="15dp"
-    android:textSize="24sp"
-    android:textColor="@android:color/white">
+    android:textSize="24sp">
 
 </TextView>
