--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5e4040"
+    android:background="#ffffff"
     android:padding="5dp">
 
 </android.support.v7.widget.RecyclerView>
