--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -1,48 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
     android:id="@+id/recipe_item_main_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:padding="10dp"
+    android:layout_height="160dp"
     android:layout_marginBottom="15dp"
-    android:layout_marginRight="10dp"
-    android:background="@android:color/white">
+    android:gravity="center"
+    android:background="@drawable/rectangle_shape" >
 
     <ImageView
         android:id="@+id/recipe_item_image"
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:scaleType="centerCrop"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"/>
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
+        android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/recipe_item_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Shrimps"
-        android:textSize="18sp"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:maxWidth="100dp"
-        android:layout_alignTop="@+id/recipe_item_servings"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:gravity="center">
 
-    <TextView
-        android:id="@+id/recipe_item_servings"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:textSize="15sp"
-        android:drawableStart="@drawable/servings_logo"
-        android:drawableLeft="@drawable/servings_logo"
-        tools:text="8"
-        android:gravity="center"
-        android:layout_below="@id/recipe_item_image"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <TextView
+            android:id="@+id/recipe_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:maxWidth="100dp"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_marginBottom="6dp"
+            tools:text="Shrimps" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/recipe_item_servings"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:drawableLeft="@drawable/servings_logo_white"
+            android:drawableStart="@drawable/servings_logo_white"
+            android:gravity="center"
+            android:layout_margin="5dp"
+            android:textSize="15sp"
+            android:textColor="@android:color/white"
+            tools:text="8" />
+
+    </LinearLayout>
+
+</LinearLayout>
+
+    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:id="@+id/recipe_item_main_layout"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:gravity="center"--><!--android:padding="10dp"--><!--android:layout_marginBottom="15dp"--><!--android:layout_marginRight="10dp"--><!--android:background="@android:color/white">-->
+
+    <!--<ImageView--><!--android:id="@+id/recipe_item_image"--><!--android:layout_width="match_parent"--><!--android:layout_height="130dp"--><!--android:scaleType="centerCrop"--><!--android:layout_alignParentTop="true"--><!--android:layout_centerHorizontal="true"--><!--android:layout_marginBottom="10dp"/>-->
+
+    <!--<TextView--><!--android:id="@+id/recipe_item_name"--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--tools:text="Shrimps"--><!--android:textSize="18sp"--><!--android:textAlignment="center"--><!--android:gravity="center"--><!--android:maxWidth="100dp"--><!--android:layout_alignTop="@+id/recipe_item_servings"--><!--android:layout_centerHorizontal="true" />-->
+
+    <!--<TextView--><!--android:id="@+id/recipe_item_servings"--><!--android:layout_width="50dp"--><!--android:layout_height="30dp"--><!--android:textSize="15sp"--><!--android:drawableStart="@drawable/servings_logo"--><!--android:drawableLeft="@drawable/servings_logo"--><!--tools:text="8"--><!--android:gravity="center"--><!--android:layout_below="@id/recipe_item_image"--><!--android:layout_alignParentRight="true"--><!--android:layout_alignParentEnd="true" />-->
+
+    <!--</RelativeLayout>-->
