--- a/app/src/main/res/layout/details_fragment.xml
+++ b/app/src/main/res/layout/details_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="scrollable"
-        app:tabIndicatorColor="@android:color/black"
+        app:tabIndicatorColor="@android:color/white"
         android:background="@color/colorPrimary"
         app:tabMaxWidth="130dp"
         app:tabTextColor="@android:color/white"
