--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -12,7 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="13sp"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:layout_weight="0.5"
         android:background="@color/colorPrimary"
@@ -35,6 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:textStyle="bold"
         android:layout_weight="2"
         android:background="@color/colorAccent"/>
 
