feat: Improved UI for tablet layout
- Set Widget as non resizable
- Reduced margin between recipes for phone layout

--- a/app/src/main/res/layout-sw600dp/details_activity.xml
+++ b/app/src/main/res/layout-sw600dp/details_activity.xml
@@ -15,7 +15,7 @@
         android:id="@+id/divider"
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"/>
+        android:background="@color/colorPrimaryDark"/>
 
     <FrameLayout
         android:id="@+id/step_details_frame_layout"
