--- a/app/src/main/res/xml/recipe_widget_provider_info.xml
+++ b/app/src/main/res/xml/recipe_widget_provider_info.xml
@@ -5,6 +5,6 @@
     android:minHeight="120dp"
     android:minWidth="80dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="none"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"></appwidget-provider>
