--- a/app/src/main/res/layout-sw600dp/recipe_item.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_item.xml
@@ -5,22 +5,22 @@
     android:orientation="horizontal"
     android:id="@+id/recipe_item_main_layout"
     android:layout_width="match_parent"
-    android:layout_height="190dp"
-    android:layout_marginBottom="8dp"
+    android:layout_height="220dp"
     android:gravity="center"
-    android:background="@drawable/rectangle_shape" >
+    android:background="@drawable/rectangle_shape"
+    android:layout_margin="5dp">
 
     <ImageView
         android:id="@+id/recipe_item_image"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:scaleType="centerCrop" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:layout_height="match_parent"
         android:gravity="center">
 
