--- a/app/src/main/res/layout-sw600dp/step_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/step_fragment.xml
@@ -16,12 +16,26 @@
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/step_exoplayer_view"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            android:layout_height="400dp"
+            android:visibility="gone"/>
+
+        <ImageView
+            android:id="@+id/default_step_image"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:src="@drawable/chef"
+            android:background="@android:color/black"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/step_text_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:padding="40dp"
+            android:layout_margin="10dp"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:background="@drawable/rectangle_shape_white"/>
 
     </LinearLayout>
 
