--- a/app/src/main/res/layout-sw600dp/steps_list_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/steps_list_fragment.xml
@@ -4,6 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@color/colorPrimary">
 
 </android.support.v7.widget.RecyclerView>
