feat: Added feature to select favorite recipes
- Added widget preview image
- Included a heart shaped button in details activity to toggle favorite recipes
- Favorite recipes are displayed in the favorites tab and stored
in SharedPreferences

--- a/app/src/main/res/layout/favorites_fragment.xml
+++ b/app/src/main/res/layout/favorites_fragment.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_favorite_recipes_layout"
+<android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_favorite_recipes_grid_layout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="#ffffff"
+    android:padding="5dp">
 
-</TextView>
+</android.support.v7.widget.RecyclerView>
