--- a/app/src/main/res/xml/recipe_widget_provider_info.xml
+++ b/app/src/main/res/xml/recipe_widget_provider_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/recipe_widget_provider"
     android:minHeight="120dp"
     android:minWidth="80dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/widget_image"
     android:resizeMode="none"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"></appwidget-provider>
