--- a/app/src/main/res/layout/recipe_widget_provider.xml
+++ b/app/src/main/res/layout/recipe_widget_provider.xml
@@ -3,14 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:padding="@dimen/widget_margin"
     android:layout_gravity="center">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="BakingApp"
+        android:text="@string/app_name"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:background="@color/colorPrimaryDark"/>
@@ -19,9 +18,9 @@
         android:id="@+id/appwidget_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
         android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text"
+        android:background="@color/colorPrimary"
         android:textColor="#ffffff"
         android:textSize="24sp"
         android:layout_weight="0.2"
