--- a/app/src/main/res/layout/recipe_widget_provider.xml
+++ b/app/src/main/res/layout/recipe_widget_provider.xml
@@ -33,15 +33,13 @@
             android:textSize="24sp"
             android:textStyle="bold|italic" />
 
-
         <ImageView
             android:id="@+id/appwidget_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.6"
             android:background="@color/colorPrimary"
-            android:scaleType="fitXY"
-            android:src="@drawable/recipe1" />
+            android:scaleType="fitXY" />
 
         <LinearLayout
             android:id="@+id/appwidget_servings_layout"
@@ -51,7 +49,8 @@
             android:layout_weight="0.15"
             android:background="@color/colorAccent"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/appwidget_servings_image"
