--- a/app/src/main/res/menu/details_menu.xml
+++ b/app/src/main/res/menu/details_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/details_menu_main_layout">
 
     <item
         android:id="@+id/favorite_button"
         android:orderInCategory="1"
-        android:title="Favorite"
+        android:title="@string/menu_favorite"
         android:icon="@drawable/favorite_not_selected"
         app:showAsAction="ifRoom"/>
 
@@ -13,7 +14,7 @@
         <item
             android:id="@+id/menu_widget"
             android:orderInCategory="1"
-            android:title="Add to Widget"
+            android:title="@string/menu_add_to_widget"
             app:showAsAction="never" />
     </group>
 
