--- a/app/src/main/res/layout-sw600dp/recipe_widget_provider.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_widget_provider.xml
@@ -42,8 +42,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.6"
             android:background="@color/colorPrimary"
-            android:scaleType="fitXY"
-            android:src="@drawable/recipe1" />
+            android:scaleType="fitXY" />
 
         <!--Servings main layout-->
         <LinearLayout
@@ -54,7 +53,8 @@
             android:layout_weight="0.15"
             android:background="@color/colorAccent"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <!--Servings logo-->
             <ImageView
